# via-rs

./: Cargo.toml  README.md  RELEASING.md  ROADMAP.md  TUTORIAL.md
.github/workflows/: ci.yml  kicad-footprint-bundle.yml
crates/via/: Cargo.toml
crates/via-cli/: Cargo.toml
crates/via-cli/src/: diagnostics.rs  doctor.rs  init.rs  inspection.rs  json.rs  kicad_export.rs  kicad_mod_asset.rs  kicad_sexp.rs  main.rs  pcb_export.rs  report.rs
crates/via-cli/tests/: cli_diagnostics.rs
crates/via-core/: Cargo.toml
crates/via-core/src/: atomic_write.rs  design.rs  diagnostic_catalog.rs  electrical.rs  error.rs  export.rs  filename.rs  footprint.rs  ir.rs  lib.rs  model.rs  rules.rs  spec.rs  symbol.rs  validation.rs
crates/via-core/src/model/: board.rs  ids.rs  net.rs  part.rs
crates/via-examples/: Cargo.toml
crates/via-examples/src/: custom_footprint_part.rs  debug_io_demo.rs  i2c_sensor_breakout.rs  lib.rs  minimal_power_led.rs  modern_api_minimal.rs  modern_custom_part.rs  polar_adjuster.rs
crates/via-footprint/: Cargo.toml
crates/via-footprint-ir/: Cargo.toml
crates/via-footprint-ir/src/: kicad.rs  lib.rs
crates/via-footprint/src/: fp.rs  generators.rs  lib.rs
crates/via-footprint/src/generators/: common.rs  connectors.rs  headers.rs  mechanical.rs  modules.rs  passives.rs  semiconductors.rs
crates/via-kicad/: Cargo.toml
crates/via-kicad-footprints/: Cargo.toml  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md
crates/via-kicad-footprints/src/: lib.rs
crates/via-kicad-sexp/: Cargo.toml
crates/via-kicad-sexp/src/: lib.rs
crates/via-kicad/src/: footprint.rs  lib.rs  netlist.rs  schematic.rs
crates/via-kicad/src/schematic/: model.rs  render.rs  util.rs
crates/via-kicad/tests/: footprint_roundtrip.rs
crates/via-lceda-pro/: Cargo.toml
crates/via-lceda-pro/src/: archive.rs  constants.rs  context.rs  device.rs  epru.rs  export.rs  footprint.rs  footprint_records.rs  ids.rs  layers.rs  lib.rs  model.rs  pcb.rs  project.rs  schematic.rs  symbol.rs  tests.rs  units.rs  validate.rs
crates/via-parts/: Cargo.toml
crates/via-parts-harmonic/: Cargo.toml
crates/via-parts-harmonic/src/: connectors.rs  drivers.rs  esp32.rs  footprints.rs  lib.rs  passives.rs  power.rs
crates/via-parts/src/: lib.rs  passives.rs
crates/via-patterns-harmonic/: Cargo.toml
crates/via-patterns-harmonic/src/: lib.rs
crates/via-patterns-motion/: Cargo.toml
crates/via-patterns-motion/src/: lib.rs
crates/via-project/: Cargo.toml
crates/via-project/src/: lib.rs
crates/via/src/: design_ext.rs  lib.rs  units.rs
tools/: png_logo_to_svg.py  verify_packages.py
xtask/: Cargo.toml
xtask/src/: main.rs
