[workspace]
members = [
    "crates/via",
    "crates/via-core",
    "crates/via-footprint-ir",
    "crates/via-footprint",
    "crates/via-kicad-sexp",
    "crates/via-kicad",
    "crates/via-kicad-footprints",
    "crates/via-lceda-pro",
    "crates/via-parts",
    "crates/via-project",
    "crates/via-examples",
    "crates/via-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jz315/via-rs"
homepage = "https://github.com/jz315/via-rs"
categories = ["development-tools"]
keywords = ["eda", "pcb", "kicad", "electronics"]
