[package]
name = "via-pcb-cli"
version.workspace = true
edition.workspace = true
description = "Project-oriented CLI wrapper for via checks, snapshots, BOMs, and exports."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "via"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
via-core = { version = "=0.1.1", path = "../via-core" }
via-kicad = { version = "=0.1.1", path = "../via-kicad" }
via-kicad-sexp = { version = "=0.1.1", path = "../via-kicad-sexp" }
via-kicad-footprints = { version = "=0.1.1", path = "../via-kicad-footprints" }
via-lceda-pro = { version = "=0.1.1", path = "../via-lceda-pro" }
via-project = { version = "=0.1.1", path = "../via-project" }

[dev-dependencies]
via-footprint-ir = { version = "=0.1.1", path = "../via-footprint-ir" }
