[package]
name = "via-core"
version.workspace = true
edition.workspace = true
description = "Core Rust circuit model for via."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
via-footprint-ir = { version = "=0.1.0", path = "../via-footprint-ir" }
