[package]
name = "via-examples"
version.workspace = true
edition.workspace = true
description = "Example and project boards built on the via library crates."
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
via = { version = "=0.1.0", path = "../via" }
via-core = { version = "=0.1.0", path = "../via-core" }
