[package]
name = "via-footprint-ir"
version.workspace = true
edition.workspace = true
description = "Low-level footprint intermediate representation for via."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
