[package]
name = "via-footprint"
version.workspace = true
edition.workspace = true
description = "Geometry model and generators for KiCad footprints."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
via-core = { version = "=0.1.0", path = "../via-core" }
via-footprint-ir = { version = "=0.1.0", path = "../via-footprint-ir" }
