[package]
name = "via-kicad-footprints"
version.workspace = true
edition.workspace = true
description = "KiCad official footprint cache manifest and export helpers for VIA."
license-file = "LICENSE.md"
readme = "README.md"
categories = ["development-tools"]
keywords = ["kicad", "pcb", "footprint", "eda"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE.md",
    "THIRD_PARTY_NOTICES.md",
    "src/**",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "2"
zstd = "0.13"
