[package]
name = "via-kicad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "KiCad import and export helpers for via."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
via-core = { version = "=0.3.0", path = "../via-core" }
via-kicad-sexp = { version = "=0.3.0", path = "../via-kicad-sexp" }

[dev-dependencies]
via-footprint = { version = "=0.3.0", path = "../via-footprint" }
