[package]
name = "via-lceda-pro"
version.workspace = true
edition.workspace = true
description = "LCEDA Pro export helpers for via."
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
via-core = { version = "=0.1.0", path = "../via-core" }
via-footprint-ir = { version = "=0.1.0", path = "../via-footprint-ir" }
