[package]
name = "via-lceda-pro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LCEDA Pro export helpers for via."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
via-core = { version = "=0.3.0", path = "../via-core" }
via-footprint-ir = { version = "=0.3.0", path = "../via-footprint-ir" }
