[package]
name = "via-parts-harmonic"
version.workspace = true
edition.workspace = true
description = "Reusable module definitions for the harmonic mount electronics project."
license.workspace = true

[dependencies]
via-core = { path = "../via-core" }
via-footprint = { path = "../via-footprint" }
via-parts = { path = "../via-parts" }
