[package]
name = "via-parts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generic reusable component definitions for VIA designs."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
via-core = { version = "=0.3.0", path = "../via-core" }
via-footprint = { version = "=0.3.0", path = "../via-footprint" }
