[package]
name = "via-patterns-harmonic"
version.workspace = true
edition.workspace = true
description = "Reusable harmonic-mount circuit patterns for via boards."
license.workspace = true

[dependencies]
via-core = { path = "../via-core" }
via-parts = { path = "../via-parts" }
via-parts-harmonic = { path = "../via-parts-harmonic" }
