[package]
name = "via-patterns-motion"
version.workspace = true
edition.workspace = true
description = "Reusable motion-control circuit patterns for via boards."
license.workspace = true

[dependencies]
via-core = { path = "../via-core" }
via-parts = { path = "../via-parts" }
via-parts-harmonic = { path = "../via-parts-harmonic" }
