[package]
name = "via-project"
version.workspace = true
edition.workspace = true
description = "Project configuration and design provider helpers for via."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
via-core = { version = "=0.1.0", path = "../via-core" }
