[package]
name = "via-rs"
version.workspace = true
edition.workspace = true
description = "User-facing facade crate for the VIA Rust EDA library."
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
name = "via"
path = "src/lib.rs"

[dependencies]
via-core = { version = "=0.1.0", path = "../via-core" }
via-footprint = { version = "=0.1.0", path = "../via-footprint" }
via-footprint-ir = { version = "=0.1.0", path = "../via-footprint-ir" }
via-parts = { version = "=0.1.0", path = "../via-parts" }
via-project = { version = "=0.1.0", path = "../via-project" }
